syntax = "proto3";

message RangeQuery {
   int32 minRange = 1;
   int32 maxRange = 2;
   int32 count = 3;
}

message ValueReply {
  int32 value = 1;
}

message ValuePairReply {
  repeated ValueReply values = 1;
}

service Randomizer {
  rpc GetValueStream(RangeQuery) returns (stream ValueReply) {}

  rpc GetValuePair(RangeQuery) returns (ValuePairReply) {}
}
